--- a/miniprogram/miniprogram/pages/partOne/partOne.wxss
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxss
@@ -142,3 +142,66 @@ page {
   position: absolute;
   right: 10px;
 } 
+/* 翻转卡片效果 */
+.flip-card {
+  perspective: 1000px;
+  width: 100%;
+  height: 300px;
+  cursor: pointer;
+}
+ 
+.flip-card-inner {      
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+ 
+.flip-card.flipped .flip-card-inner {
+  transform: rotateY(180deg);
+}
+ 
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* padding: 15px; */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  background-color: white;
+}
+ 
+.flip-card-back {
+  transform: rotateY(180deg);
+  background-color: #f8f9fa;
+}
+.card-header-note{
+  color: #999;
+  font-size: 16px;
+}
+.card-body-flip {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  padding: 10px;
+  overflow-y: auto;
+  text-align: justify;
+}
+ 
+.flip-hint {
+  font-size: 12px;
+  color: #888;
+  padding: 5px;
+  /* background-color: #f1f1f1; */
+  border-radius: 5px;
+  margin-top: 10px;
+}       
