--- a/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
+++ b/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
@@ -13,18 +13,52 @@
           <text class="points-title">我的积分</text>
           <text class="points-value">{{userInfo.points}}</text>
         </view>
-        <view class="points-actions">
-          <view class="action-item {{hasCheckedIn ? 'checked' : ''}}" bindtap="handleCheckIn">
+        
+        <!-- 每日签到区域 -->
+        <view class="action-card sign-in-card {{hasCheckedIn ? 'checked' : ''}}" bindtap="handleCheckIn">
+          <view class="action-left">
             <text class="action-icon">📅</text>
-            <text class="action-text">{{hasCheckedIn ? '今日已签到' : '每日签到'}}</text>
+            <view class="action-info">
+              <text class="action-title">每日签到</text>
+              <text class="action-desc">每日签到可获得5积分奖励</text>
+            </view>
+          </view>
+          <view class="action-right">
+            <text class="action-status">{{hasCheckedIn ? '今日已签到' : '去签到'}}</text>
             <text class="action-points">+5</text>
           </view>
-          <view class="action-item" bindtap="handleInvite">
+        </view>
+
+        <!-- 邀请好友区域 -->
+        <view class="action-card invite-card" bindtap="handleInvite">
+          <view class="action-left">
             <text class="action-icon">👥</text>
-            <text class="action-text">邀请好友</text>
+            <view class="action-info">
+              <text class="action-title">邀请好友</text>
+              <text class="action-desc">邀请好友注册，双方各得20积分</text>
+            </view>
+          </view>
+          <view class="action-right">
+            <text class="action-status">去邀请</text>
             <text class="action-points">+20</text>
           </view>
         </view>
+
+        <!-- 刷新邀请区域 -->
+        <view class="action-card refresh-card" bindtap="handleRefreshInvite">
+          <view class="action-left">
+            <text class="action-icon">🔄</text>
+            <view class="action-info">
+              <text class="action-title">刷新邀请</text>
+              <text class="action-desc">查询是否有好友通过邀请注册</text>
+            </view>
+          </view>
+          <view class="action-right">
+            <text class="action-status">去刷新</text>
+          </view>
+        </view>
+
+        <!-- 填写邀请码入口 -->
         <view class="invite-code-entry" bindtap="showInviteCodeInput" wx:if="{{!hasUsedInviteCode && !inviterId}}">
           <text class="entry-text">填写您收到的邀请码</text>
           <text class="entry-arrow">></text>
@@ -94,13 +128,13 @@
         <view class="copy-btn" bindtap="copyInviteCode">复制邀请码</view>
       </view>
       <view class="invite-tips">
-        <text class="tip-item">• 好友注册时填写邀请码</text>
+        <text class="tip-item">• 好友填写您给的邀请码</text>
         <text class="tip-item">• 双方各获得20积分奖励</text>
         <text class="tip-item">• 积分可用于解锁更多功能</text>
       </view>
       <view class="share-tips">
         <text class="tip-item">• 你也可以选择分享小程序给好友</text>
-        <text class="tip-item">• 好友通过分享链接注册即可</text>
+        <text class="tip-item">• 好友通过分享链接进入即可</text>
       </view>
     </view>
   </view>
