--- a/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
+++ b/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
@@ -11,7 +11,7 @@
       <view class="points-section">
         <view class="points-header">
           <text class="points-title">我的积分</text>
-          <text class="points-value">{{userInfo.points}}</text>
+          <text class="points-value">{{points}}</text>
         </view>
         
         <!-- 每日签到区域 -->
@@ -20,12 +20,12 @@
             <text class="action-icon">📅</text>
             <view class="action-info">
               <text class="action-title">每日签到</text>
-              <text class="action-desc">每日签到可获得5积分奖励</text>
+              <text class="action-desc">每日签到可获得{{configCheckedInNum}}积分奖励</text>
             </view>
           </view>
           <view class="action-right">
             <text class="action-status">{{hasCheckedIn ? '今日已签到' : '去签到'}}</text>
-            <text class="action-points">+5</text>
+            <text class="action-points">+{{configCheckedInNum}}</text>
           </view>
         </view>
 
@@ -35,12 +35,12 @@
             <text class="action-icon">👥</text>
             <view class="action-info">
               <text class="action-title">邀请好友</text>
-              <text class="action-desc">邀请好友注册，双方各得20积分</text>
+              <text class="action-desc">邀请好友注册，双方各得{{configInviteNum}}积分</text>
             </view>
           </view>
           <view class="action-right">
             <text class="action-status">去邀请</text>
-            <text class="action-points">+20</text>
+            <text class="action-points">+{{configInviteNum}}</text>
           </view>
         </view>
 
@@ -129,11 +129,11 @@
       </view>
       <view class="invite-tips">
         <text class="tip-item">• 好友填写您给的邀请码</text>
-        <text class="tip-item">• 双方各获得20积分奖励</text>
+        <text class="tip-item">• 双方各获得{{configInviteNum}}积分奖励</text>
         <text class="tip-item">• 积分可用于解锁更多功能</text>
       </view>
       <view class="share-tips">
-        <text class="tip-item">• 你也可以选择分享小程序给好友</text>
+        <text class="tip-item">• 您也可以选择分享小程序给好友</text>
         <text class="tip-item">• 好友通过分享链接进入即可</text>
       </view>
     </view>
@@ -213,7 +213,7 @@
     </view>
     <view class="popup-tips">
       <text class="tip-item">• 填写好友的邀请码</text>
-      <text class="tip-item">• 双方各获得20积分奖励</text>
+      <text class="tip-item">• 双方各获得{{configInviteNum}}积分奖励</text>
     </view>
     <view class="popup-buttons">
       <button class="cancel-btn" bindtap="closeInviteCodeInputPopup">取消</button>
