用户分享给好友，分享到朋友圈doing

--- a/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxss
+++ b/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxss
@@ -12,6 +12,7 @@
   padding-bottom: calc(30rpx + 120rpx); /* 增加底部 padding，避免被 tabBar 遮挡 */
   box-sizing: border-box;
   overflow-y: auto;
+  overflow-x: hidden;
   width: 100%;
 }
 
@@ -799,6 +800,7 @@
 
 .tip-item:last-child {
   margin-bottom: 0;
+}
 .highlight {
   color: #FFD700;
   font-weight: bold;
