--- a/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
+++ b/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
@@ -76,7 +76,17 @@
   }
   
   /* state=1和state=2的卡片样式 */
-  .state1 .question-card,
+  .state1 .question-card {
+    width: 100%;
+    padding: 24px;
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    position: relative;
+    min-height: 200px;
+    cursor: pointer;
+    overflow: hidden;
+  }
   .state2 .question-card {
     width: 100%;
     padding: 24px;
@@ -98,7 +108,6 @@
     text-align: justify;
   }
   
-  .card-front,
   .card-back {
     position: absolute;
     width: 100%;
@@ -121,6 +130,8 @@
   
   .card-front {
     position: absolute;
+    /* left: 0; */
+    /* top: 10%; */
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
@@ -128,15 +139,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
   }
   
   .question-title {
     font-size: 18px;
     font-weight: 500;
     line-height: 1.6;
-    text-align: center;
-    margin-bottom: 8px;
+    text-align: justify;
+    margin: 160px 0 20px 0;
   }
   
   .question-tip {
